--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --open",
+    "start": "webpack serve --open ",
     "build": "webpack --mode production"
   },
   "keywords": [
@@ -21,9 +21,10 @@
     "babel-loader": "^8.2.2",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
+    "node": "^18.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.4.1",
+    "react-router-dom": "^5.2.0",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0"
